done for tonight

--- a/urand.tex
+++ b/urand.tex
@@ -165,17 +165,46 @@ inventions.
 
 \subsubsection{Patent trolls}
 
-- different levels of patent from rock solid to pure troll-threats
+The interrelated nature of technological innovation, and the frequency
+with which fundamental ideas spring into existance in multiple places
+at the same time, has led to the prevelenace of {\it patent trolls}.
+The term is generally defined as people and companies that buy lots of
+patents, wait for people to start using the ideas contained theirin
+naturally, and then extort the maximum rents possible from the users.
 
-Patent trolling is 
+Patent trolls generally wield two types of patent - the specific
+patent that is nearly certain to get rediscovered in time, and the
+general, overly-broad patent that basically apply to everything ever,
+like the people who freakin' patented {\it linked lists} in freakin'
+2004 \cite{want}.  The latter form of troll patent is often cited as
+evidence for the necessity of patent reform, as, despite the fact that
+these patents are usually unenforcable, the mere threat of patent
+litigation can be used to extract rents from other innovators
+and have a chilling effect on innovation overall.
 
 \subsection{The chillaxing effect}
 
-Our method and apparatus for saving the world was inspired by
-(cite twitter)
+Our method and apparatus was inspired by some person on Twitter
+\cite{tweet}, though we stress that this does not count as prior art.
+As the random Twitter-person observes, it's a good thing that the
+fundamental good ideas in computer science aren't covered by patents,
+because they are useful for helping droves of other computer
+scientists do their work.  But what if the {\it bad} ideas in computer
+science were covered by patents? It might prevent droves of other
+computer scientists from doing their work. This {\it chillaxing
+  effect}, effectively wielded, could simultaneously get the attention
+of the largest corporate players in programming languages and software
+engineering and refocus the efforts of academic research in directions
+that have not been meticulously chillaxed.
 
-Examples of history: SIGBOVIK/Milner idea
-
+I mean, we tried to come up with a bad idea a couple of years ago
+\cite{sigbovik10}, and then we learned at the ICFP in Baltimore that
+Milner had actually come up with the {\it same bad idea} in one of the
+early ML implementations, before replacing it with the less dumb idea
+later on. Milner could have {\it patented} this bad idea when he came
+up with the better idea, thus giving the forces of sanity with a
+powerful tool against the next person who tries to implement the bad
+idea and stop there.
 
 \section{Examples}
 
@@ -407,6 +436,13 @@ Ebert, Michael A.
 \newblock Patent Application 11/757,456.
 \newblock Filed June 4, 2007.
 
+\bibitem{tweet}
+Gorman, Jason. 
+\newblock (jasongorman).
+\newblock ``We should think ourselves very lucky that Alan Turing didn't patent ``a single machine which can be used to compute any computable sequence''''
+\newblock March 13, 2012.
+\newblock Tweet.
+
 \bibitem{sigbovik09}
 Jones, Laurie A (ed).
 \newblock ``Proceedings of SIGBOVIK 2009.''
@@ -439,6 +475,13 @@ Simmons, Robert J. (ed).
 Simmons, Robert J., Nels E. Beckman, and Dr. Tom Murphy VII, Ph.D.
 \newblock ``Functional Perl: Programming with Recursion Schemes in Python.''
 \newblock In {\it SIGBOVIK 2010}.
+
+\bibitem{want}
+Wang, Ming-Jen.
+\newblock ``Linked list.''
+\newblock Patent 7,028,023.
+\newblock Granted April 11, 2006.
+
 
 \end{thebibliography}
 
