--- a/urand.tex
+++ b/urand.tex
@@ -176,11 +176,13 @@ Patent trolls generally wield two types of patent - the specific
 patent that is nearly certain to get rediscovered in time, and the
 general, overly-broad patent that basically apply to everything ever,
 like the people who freakin' patented {\it linked lists} in freakin'
-2004 \cite{want}.  The latter form of troll patent is often cited as
+2004 \cite{want} or the patent trolls currently suing all your cell
+phone makers because they let you select emoticons from a list
+\cite{smile}.  The latter form of troll patent is often cited as
 evidence for the necessity of patent reform, as, despite the fact that
 these patents are usually unenforcable, the mere threat of patent
-litigation can be used to extract rents from other innovators
-and have a chilling effect on innovation overall.
+litigation can be used to extract rents from other innovators and have
+a chilling effect on innovation overall.
 
 \subsection{The chillaxing effect}
 
@@ -476,6 +478,12 @@ Simmons, Robert J. (ed).
 Simmons, Robert J., Nels E. Beckman, and Dr. Tom Murphy VII, Ph.D.
 \newblock ``Functional Perl: Programming with Recursion Schemes in Python.''
 \newblock In {\it SIGBOVIK 2010}.
+
+\bibitem{smile}
+Nelson, Jonathan O.
+\newblock ``Emoticon input method and apparatus.''
+\newblock Patent 7,167,731 B2.
+\newblock Granted January 23, 2007.
 
 \bibitem{want}
 Wang, Ming-Jen.
