It compiles ship it

--- a/urand.tex
+++ b/urand.tex
@@ -131,11 +131,17 @@ terms, and the scourge of {\it patent trolls}. Both of these phenomena
 the world, {\tt The /dev/urand/ Foundation}, described in Section 3.
 
 \subsubsection{Reasonable and non-discriminatory terms}
+\label{sec:rand}
 
-Standards bodies require member organizations to adhere to the mostly
-ill-defined requirement of using {\it reasonable and
-  non-discriminatory terms}, RAND for short, for any and all patents
-owned by those organizations that pertain to the standard.
+Standards bodies have to work around the fact that many standards
+inevitably are covered by patents. Standards-setting organizations
+allow for patented technologies to be used in standards, but require
+that the patent holder provide {\bf R}easonable {\bf a}nd {\bf
+  N}on-{\bf D}iscriminatory licensing options, or RAND. This term
+isn't terribly well defined, but the intent is to ensure that anyone
+can implement the standard, by paying a fair licensing fee to the
+patent holder until the patent expires, and is generally good for
+technology.
 
 To see why this is important, consider a standards body with
 representatives from 57 companies all working on a new standard for
@@ -166,10 +172,10 @@ inventions.
 \subsubsection{Patent trolls}
 
 The interrelated nature of technological innovation, and the frequency
-with which fundamental ideas spring into existance in multiple places
-at the same time, has led to the prevelenace of {\it patent trolls}.
+with which fundamental ideas spring into existence in multiple places
+at the same time, has led to the prevalence of {\it patent trolls}.
 The term is generally defined as people and companies that buy lots of
-patents, wait for people to start using the ideas contained theirin
+patents, wait for people to start using the ideas contained therein
 naturally, and then extort the maximum rents possible from the users.
 
 Patent trolls generally wield two types of patent - the specific
@@ -180,7 +186,7 @@ like the people who freakin' patented {\it linked lists} in freakin'
 phone makers because they let you select emoticons from a list
 \cite{smile}.  The latter form of troll patent is often cited as
 evidence for the necessity of patent reform, as, despite the fact that
-these patents are usually unenforcable, the mere threat of patent
+these patents are usually unenforceable, the mere threat of patent
 litigation can be used to extract rents from other innovators and have
 a chilling effect on innovation overall.
 
@@ -376,46 +382,49 @@ method to ensure a high likelihood of having one granted.
 \section{The /dev/urand Foundation}
 
 The patents shall be administered by a new non-profit foundation,
-known as the /dev/urand Foundation. The organization is named for the
-RAND concept of patent licensing, required by many standard-setting
-organizations. These bodies allow for patented technologies to be used
-in standards, but require that the patent holder provide {\bf
-  R}easonable {\bf a}nd {\bf N}on-{\bf D}iscriminatory licensing
-options. This is to ensure that anyone can implement the standard, by
-paying a fair licensing fee to the patent holder until the patent
-expires, and is generally good for technology.
-
+known as {\tt The /dev/urand Foundation}. The organization is named for the
+RAND concept of patent licensing described in Section~\ref{sec:rand}. 
 The /dev/urand Foundation differs in that its licensing is {\bf
   U}n{\bf r}easonable {\bf a}nd {\bf N}ot-not {\bf D}iscriminatory: We
 do not offer licenses for any amount of money or other consideration.
 Our patents on bad ideas will simply never be licensed, enjoining
-anyone from using those ideas. Our over-broad patents will be licensed
+anyone from using those ideas for the duration of the patents. 
+Our over-broad patents will be licensed
 in a blatantly discriminatory fashion, only to languages that we think
-are tasteful. We might even withhold licenses when an individual has
+are tasteful. 
+We might even withhold licenses when an individual has
 done something that we just don't like, like has a name that's hard to
 spell, or didn't accept one of our papers to a prestigious
 conference. This is totally legal.
 
+We are going up against some of the biggest companies in the world,
+such as Larry Wall and Guido van Rossum, however, and so we anticipate
+that specific patents on bad ideas will be more powerful than 
+potentially indefensible over-broad patents. However, there is certainly
+a role for both kinds of patent trolling.
 The point is to strike fear into the hearts of would-be hobbyists and
 academics, with the expectation that this would be generally {\it bad}
 for the programming language ecosystem, which we can all agree is
 % Rob: some kind of pun here instead?
 pretty much up shit's creek without a paddle.
 
-We are going up against some of the biggest companies in the world,
-such as Larry Wall and Guido van Rossum.
-
-
-\subsection{Lawsuits are coming}
-
-languages that we are coming after
-
+Lawsuits: coming to a workshop on reinventing the wheel near you.
 
 \section{Conclusion}
 
-We have presented a plan for saving programming from the scourge of clumsy innovation. 
-... HERE ...
-The future of programming depends on it!
+We have presented a plan for saving programming from the scourge of
+clumsy innovation. Surely the plan is distasteful, and perhaps you
+think the world would be a better place if the negative effects of
+out-of-control patent law -- whether they chilling (bad) or chillaxing
+(awesome) -- were curtailed with the limitation or elimination of
+software patents. Maybe so! But the problem with refusing to let the
+ends justify the means is that when you do that {\it the other team
+  ends up with more means}. And we refuse to settle for average.
+
+We will fight fire with whatever
+firefighting means we can get our fricking hands on. 
+The future of programming depends on
+it!
 
 \begin{thebibliography}{1}
 
