--- a/urand.tex
+++ b/urand.tex
@@ -415,7 +415,9 @@ firefighting means we can get our fricking hands on.
 The future of programming depends on
 it!
 
-\begin{thebibliography}{1}
+\bibliographystyle{plain}
+
+\begin{thebibliography}{999}
 
 \bibitem{sigbovik11}
 Blum, Benjamin (ed).
