--- a/urand.tex
+++ b/urand.tex
@@ -105,14 +105,14 @@ patent was officially filed.
 
 One view of the patent system is that it is a deal the public makes
 with an inventor. Patents must provide enough information so that a
-skilled person can carry out the claimed invention -- this is called
+skilled person can carry out the claimed invention---this is called
 the {\it sufficiency of disclosure} requirement.  So, a patent gives
 you 20 years when you have absolute control over who is allowed to use
-your invention, but this awesome power comes at a cost -- you
+your invention, but this awesome power comes at a cost---you
 basically guarantee that, in 20 years, everybody is going to be able
 to use your invention. Furthermore, because patents are published
 right away, you give everybody else a head start on innovating further
-based on your ideas -- and if someone else comes with an innovation
+based on your ideas---and if someone else comes with an innovation
 that's awesome enough, they can get a brand new patent that {\it you}
 can't use. And Science advances!  If you don't want to give your good
 ideas to anybody else right away and/or if you think you could keep
@@ -163,7 +163,7 @@ from the adoption of their patented technology in the standard, but
 they have less to gain from concealing this from their standards-body
 partners. RAND is not a solution to patent-encumbered standards,
 merely a way to make them work in the real world. But, critically,
-RAND licensing is not itself a fundamental part of patent law -- if
+RAND licensing is not itself a fundamental part of patent law---if
 BBN Labs are {\it not} a part of the standards committee, then they can
 still wield their patents despite the standards committee members
 being bound by RAND terms when it comes to their own patented
@@ -375,9 +375,11 @@ covered by both of these patents. Many perfectly sensible languages
 would be impacted as well, but this is not a problem: We can choose to
 license the patent to languages that we judge to be tasteful, perhaps
 imposing additional contractual restrictions on the licensees, even
-regarding things not covered by our patent pool. We can easily
-develop hundreds of such applications and again use the stochastic
-method to ensure a high likelihood of having one granted.
+regarding things not covered by our patent pool, such as our personal
+preferences about indentation style and capitalization of
+identifiers. We can easily develop hundreds of such applications and
+again use the stochastic method to ensure a high likelihood of having
+one granted.
 
 \section{The /dev/urand Foundation}
 
@@ -415,8 +417,8 @@ Lawsuits: coming to a workshop on reinventing the wheel near you.
 We have presented a plan for saving programming from the scourge of
 clumsy innovation. Surely the plan is distasteful, and perhaps you
 think the world would be a better place if the negative effects of
-out-of-control patent law -- whether they chilling (bad) or chillaxing
-(awesome) -- were curtailed with the limitation or elimination of
+out-of-control patent law---whether they be chilling (bad) or chillaxing
+(awesome)---were curtailed with the limitation or elimination of
 software patents. Maybe so! But the problem with refusing to let the
 ends justify the means is that when you do that {\it the other team
   ends up with more means}. And we refuse to settle for average.
