--- a/urand.tex
+++ b/urand.tex
@@ -117,7 +117,7 @@ patent law in the context of modern information technology: the
 standardization of {\it reasonable and non-discriminatory} licensing
 terms, and the scourge of {\it patent trolls}. Both of these phenomena
 \cite{dododododod} are relevant to our method and apparatus for saving
-the world, {\tt The /dev/urand/ Foundation}, described in Section 3.
+the world, {\tt The /dev/urand Foundation}, described in Section 3.
 
 \subsubsection{Reasonable and non-discriminatory terms}
 \label{sec:rand}
@@ -167,9 +167,9 @@ The term is generally defined as people and companies that buy lots of
 patents, wait for people to start using the ideas contained therein
 naturally, and then extort the maximum rents possible from the users.
 
-Patent trolls generally wield two types of patent - the specific
+Patent trolls generally wield two types of patent: The specific
 patent that is nearly certain to get rediscovered in time, and the
-general, overly-broad patent that basically apply to everything ever,
+general, overly-broad patent that basically applies to everything ever,
 like the people who freakin' patented {\it linked lists} in freakin'
 2004 \cite{want} or the patent trolls currently suing all your cell
 phone makers because they let you select emoticons from a list
